--- a/index.html
+++ b/index.html
@@ -141,14 +141,16 @@
 
 
 
-<div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('https://cdn.pixabay.com/photo/2016/10/12/13/32/office-1734485_1280.jpg');">
+<div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('/');">
   <div class="container pt-17 pb-17">
     <div class="row">
       <div class="col-12 col-md-6 offset-md-6">
-        <h2 class="text-primary text-capitalize">幫助您的事業成長</h2>
-        <p><p><strong>集結各方面的資訊專才：</strong> 系統架構、雲端、資料庫、網路及運維開發等，在進行每個專案運行時才能各出所力，在上線時嚴陣以待，而在日後維護或更新迭代能平滑升級。</p>
+        <h2 class="text-primary text-capitalize">我們的優勢</h2>
+        <p><p>熟練的系統運維經驗，能協助您的電子商務或線上系統在面向全球的受眾下，以更低的成本進行部署，
+以自動化程序來減少人工費用支出，提升您的業績，同時也能改善用戶端體驗，提高品牌價值。<br>
+<a href="/work/increase-customer-acquistion-rate/">提高獲客率的3個方法</a></p>
 </p>
-        <a class="button" href="/case">» 成就案例</a>
+        <a class="button" href="/about">» 關於</a>
       </div>
     </div>
   </div>
@@ -272,21 +274,6 @@
 </div>
 
 
-
-<div id="home" class="strip bg-primary bg-cover bg-position-top bg-overlay" style='background-image: url("/");'>
-  <div class="container pt-8 pb-8 pb-md-12 pt-md-12">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-8 text-center text-white">
-        <h2>我們的優勢</h2>
-        <p>熟練的系統運維經驗，能協助您的電子商務或線上系統在面向全球的受眾下，以更低的成本進行部署，以自動化程序來減少人工費用支出，提升您的業績，同時也能改善用戶端體驗，提高品牌價值。</p>
-
-        
-          <a class="button button-white" href="/about">» 關於</a>
-        
-      </div>
-    </div>
-  </div>
-</div>
 
 
 
