--- a/work/e-commerce-ip/index.html
+++ b/work/e-commerce-ip/index.html
@@ -107,7 +107,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/case/case1.jpg')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">case</span>
+      <span class="hero-section">work</span>
       <h1>電商品牌</h1>
       <p>打造品牌 跨境營銷</p>
     </div>
@@ -151,7 +151,6 @@
 對於快速成長的電商品牌,及時進行數字化轉型至關重要。通過整合先進技術和優化運營流程,不僅能夠顯著提升運營效率,還能大幅改善客戶體驗,從而在激烈的市場競爭中脫穎而出。成功的電商運營需要在技術、流程和人才三方面同步發力,持續優化和創新。</p>
 <h6 id="規劃電商品牌的重要流程">規劃電商品牌的重要流程</h6>
 <p><a href="/case/e-commerce-arch/">查看案例</a></p>
-<p><a href="/work/increase-customer-acquistion-rate/">提高獲客率的3個方法</a></p>
 </div>
       </div>
     </div>
