--- a/work/migration-to-cloud-buzz/index.html
+++ b/work/migration-to-cloud-buzz/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>電商品牌 - AI OP-專業的運維服務</title>
+  <title>中小企業 - AI OP-專業的運維服務</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://aiop.one/favicon.png">
@@ -104,12 +104,12 @@
   </div>
 </div>
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/case/case1.jpg')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('https://loremflickr.com/1600/400/computer,network')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">case</span>
-      <h1>電商品牌</h1>
-      <p>打造品牌 跨境營銷</p>
+      <span class="hero-section">work</span>
+      <h1>中小企業雲端遷移</h1>
+      <p>節省基礎設施成本，優化雲端遷移</p>
     </div>
   </div>
 </div>
@@ -119,39 +119,43 @@
     <div class="col-12 col-md-8">
       <div class="case case-single">
         <div class="content"><p><strong>案例描述</strong>：
-一家台灣新興電商品牌希望在競爭激烈的市場中脫穎而出，並建立強大的品牌形象。
-他們需要快速構建一個吸引顧客的電商平台，並提升品牌知名度及市場份額。</p>
-<p><strong>挑戰</strong>：
-該品牌面臨的挑戰主要包括：建立一個功能全面且易於使用的電商平台，提升品牌在市場中的可見度，並有效管理線上營銷活動以吸引目標顧客。
-此外，還需要確保平台能夠支持多種支付方式和配送選項，並且具備良好的用戶體驗和性能。
-同時日賞的營運中也面臨這些挑戰：</p>
+某製造業企業的IT系統部署在傳統的本地數據中心，存在諸多問題尚未解決而影響産能及管理效率。
+目前存在以下问题：
+基礎設施老化，維護成本高。
+系統擴展性差，難以滿足業務發展需求。
+系統可靠性差，經常出現故障，影響生產運營。</p>
+<p><em><strong>挑戰</strong></em>：
+如何將IT系統遷移到雲端，既要保障業務平穩運行，又要降低遷移成本和風險？</p>
 <ol>
-<li>難以準確洞察消費者需求，導致產品開發和營銷活動效果不佳。</li>
-<li>無法提供個性化的購物體驗，降低了顧客滿意度和忠誠度。</li>
-<li>難以有效管理供應鏈，導致庫存積壓和缺貨等問題。</li>
+<li>確保業務連續性,避免長時間停機</li>
+<li>保護敏感的財務和客戶數據</li>
+<li>整合現有的遺留系統</li>
+<li>控制雲端遷移和後續運營成本</li>
+<li>培訓員工適應新的雲端環境</li>
 </ol>
 <h6 id="解決方案">解決方案</h6>
-<p>我們首先幫助客戶選擇了流行的電商平台工具，包括 Shopify 和 WordPress eCommerce，並根據品牌需求進行了功能擴展和自定義設計。
-我們設計了一個現代化的用戶界面，確保平台具備簡便的購物流程和高效的產品管理系統。</p>
-<p>在品牌推廣方面，我們運用了 SEO 優化、社交媒體營銷和內容營銷等策略，提升了品牌的線上曝光率。我們還設計了促銷活動和忠誠度計劃，以吸引並留住顧客。</p>
+<p>AIOP 為該公司制定了一個詳細的雲端遷移計劃。
+首先，我們對現有系統進行全面的分析，識別關鍵應用和數據。
+在此基礎上，我們選擇了 AWS 作為雲端服務提供商，設計了一個高可用性和高擴展性的雲端架構。
+遷移過程分為多個階段，先從非核心業務開始，逐步將核心業務遷移至雲端。</p>
+<p>我們設計了分階段的<code>混合雲遷移策略</code>。首先將非關鍵應用遷移至公有雲,再逐步將核心系統遷移至私有雲。採用容器技術實現應用的可移植性,使用數據複製和同步工具確保數據完整性。實施嚴格的訪問控制和加密措施保護敏感數據。</p>
+<p>整個過程中，我們實施了嚴格的數據同步和安全措施，並進行了多次測試，確保系統的穩定運行。</p>
 <h6 id="案例成果">案例成果</h6>
-<p>經過三個月的合作，該電商品牌的電商平台成功上線，並迅速吸引了大量顧客。品牌的網站流量提升了150%，轉化率提高了35%。
-線上銷售額在首個季度達到預期目標的120%，顯著提升了市場份額和品牌知名度。用戶反饋表明，平台的用戶體驗良好，購物過程簡便且愉快。</p>
+<p>經過為期六個月的遷移工作，該公司成功將所有核心業務系統遷移至雲端。
+遷移完成後，系統運行成本降低了約<code>40%</code>，並實現了彈性擴展，能夠快速響應業務需求變化。
+系統的可用性達到<code>99.99%</code>，大幅提升了業務的穩定性和可靠性。
+用戶反饋顯示，系統性能顯著提高，數據訪問速度提升了<code>50%</code>。</p>
 <h6 id="具體措施建議">具體措施建議</h6>
 <ol>
-<li>選擇合適平台：根據品牌需求選擇合適的電商平台工具，如 Shopify 或 WordPress eCommerce。</li>
-<li>自定義設計：設計符合品牌形象的用戶界面，確保購物流程的簡便和高效。</li>
-<li>SEO 優化：進行 SEO 優化，提升品牌在搜索引擎中的可見度。</li>
-<li>社交媒體營銷：運用社交媒體推廣品牌，增加品牌曝光率。</li>
-<li>內容營銷：創建有價值的內容來吸引和維護顧客。</li>
-<li>促銷和忠誠度計劃：設計促銷活動和忠誠度計劃以提升顧客留存率。</li>
+<li>詳細規劃：制定詳細的遷移計劃，包括風險評估和應對措施。</li>
+<li>分階段實施：分階段遷移，確保每一步驟都在可控範圍內進行。</li>
+<li>數據同步：實施嚴格的數據同步機制，確保數據完整性和一致性。</li>
+<li>多次測試：在遷移過程中進行多次測試，包括功能測試、性能測試和安全測試。</li>
+<li>安全保障：加強雲端環境的安全性，採用加密和訪問控制等技術措施。</li>
 </ol>
 <h6 id="案例啟示">案例啟示</h6>
-<p>這次成功的電商品牌協助案例表明，通過量身定制的電商平台建設和全面的品牌推廣策略，可以有效提升品牌在市場中的競爭力。
-對於快速成長的電商品牌,及時進行數字化轉型至關重要。通過整合先進技術和優化運營流程,不僅能夠顯著提升運營效率,還能大幅改善客戶體驗,從而在激烈的市場競爭中脫穎而出。成功的電商運營需要在技術、流程和人才三方面同步發力,持續優化和創新。</p>
-<h6 id="規劃電商品牌的重要流程">規劃電商品牌的重要流程</h6>
-<p><a href="/case/e-commerce-arch/">查看案例</a></p>
-<p><a href="/work/increase-customer-acquistion-rate/">提高獲客率的3個方法</a></p>
+<p>實現高效的資源利用，節省硬體和維護成本。</p>
+<p>這次成功的雲端遷移案例表明，通過詳細的規劃和嚴格的執行，可以實現傳統系統向雲端的平滑過渡。遷移至雲端後，企業不僅可以大幅降低運營成本，還能提高系統的穩定性和性能，為業務的快速擴展提供強有力的支持。選擇 AIOP 作為您的雲端遷移合作夥伴，您將獲得專業的技術支持和卓越的服務體驗。</p>
 </div>
       </div>
     </div>
