--- a/work/increase-customer-acquistion-rate/index.html
+++ b/work/increase-customer-acquistion-rate/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>電商品牌 - AI OP-專業的運維服務</title>
+  <title>提高獲客率的3個方法 - AI OP-專業的運維服務</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://aiop.one/favicon.png">
@@ -107,8 +107,8 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/case/case1.jpg')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">case</span>
-      <h1>電商品牌</h1>
+      <span class="hero-section">work</span>
+      <h1>提高獲客率的3個方法</h1>
       <p>打造品牌 跨境營銷</p>
     </div>
   </div>
@@ -118,40 +118,41 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="case case-single">
-        <div class="content"><p><strong>案例描述</strong>：
-一家台灣新興電商品牌希望在競爭激烈的市場中脫穎而出，並建立強大的品牌形象。
-他們需要快速構建一個吸引顧客的電商平台，並提升品牌知名度及市場份額。</p>
-<p><strong>挑戰</strong>：
-該品牌面臨的挑戰主要包括：建立一個功能全面且易於使用的電商平台，提升品牌在市場中的可見度，並有效管理線上營銷活動以吸引目標顧客。
-此外，還需要確保平台能夠支持多種支付方式和配送選項，並且具備良好的用戶體驗和性能。
-同時日賞的營運中也面臨這些挑戰：</p>
-<ol>
-<li>難以準確洞察消費者需求，導致產品開發和營銷活動效果不佳。</li>
-<li>無法提供個性化的購物體驗，降低了顧客滿意度和忠誠度。</li>
-<li>難以有效管理供應鏈，導致庫存積壓和缺貨等問題。</li>
-</ol>
-<h6 id="解決方案">解決方案</h6>
-<p>我們首先幫助客戶選擇了流行的電商平台工具，包括 Shopify 和 WordPress eCommerce，並根據品牌需求進行了功能擴展和自定義設計。
-我們設計了一個現代化的用戶界面，確保平台具備簡便的購物流程和高效的產品管理系統。</p>
-<p>在品牌推廣方面，我們運用了 SEO 優化、社交媒體營銷和內容營銷等策略，提升了品牌的線上曝光率。我們還設計了促銷活動和忠誠度計劃，以吸引並留住顧客。</p>
-<h6 id="案例成果">案例成果</h6>
-<p>經過三個月的合作，該電商品牌的電商平台成功上線，並迅速吸引了大量顧客。品牌的網站流量提升了150%，轉化率提高了35%。
-線上銷售額在首個季度達到預期目標的120%，顯著提升了市場份額和品牌知名度。用戶反饋表明，平台的用戶體驗良好，購物過程簡便且愉快。</p>
-<h6 id="具體措施建議">具體措施建議</h6>
-<ol>
-<li>選擇合適平台：根據品牌需求選擇合適的電商平台工具，如 Shopify 或 WordPress eCommerce。</li>
-<li>自定義設計：設計符合品牌形象的用戶界面，確保購物流程的簡便和高效。</li>
-<li>SEO 優化：進行 SEO 優化，提升品牌在搜索引擎中的可見度。</li>
-<li>社交媒體營銷：運用社交媒體推廣品牌，增加品牌曝光率。</li>
-<li>內容營銷：創建有價值的內容來吸引和維護顧客。</li>
-<li>促銷和忠誠度計劃：設計促銷活動和忠誠度計劃以提升顧客留存率。</li>
-</ol>
-<h6 id="案例啟示">案例啟示</h6>
-<p>這次成功的電商品牌協助案例表明，通過量身定制的電商平台建設和全面的品牌推廣策略，可以有效提升品牌在市場中的競爭力。
-對於快速成長的電商品牌,及時進行數字化轉型至關重要。通過整合先進技術和優化運營流程,不僅能夠顯著提升運營效率,還能大幅改善客戶體驗,從而在激烈的市場競爭中脫穎而出。成功的電商運營需要在技術、流程和人才三方面同步發力,持續優化和創新。</p>
-<h6 id="規劃電商品牌的重要流程">規劃電商品牌的重要流程</h6>
-<p><a href="/case/e-commerce-arch/">查看案例</a></p>
-<p><a href="/work/increase-customer-acquistion-rate/">提高獲客率的3個方法</a></p>
+        <div class="content"><p>從零開始或優化既有電商平台，我們提供全方位的規劃服務。<br>
+從市場分析、競品研究、到使用者體驗設計，<br>
+我們都能協助您打造一個符合台灣消費者購物習慣的電商平台。</p>
+<h6 id="精準行銷直擊目標客群">精準行銷，直擊目標客群</h6>
+<p><strong>數據分析：</strong> 透過Google Analytics、Facebook Insights等工具，
+深入分析網站訪客行為，了解他們的喜好、需求及購買旅程。<br>
+<strong>客製化內容：</strong> 根據數據分析結果，製作客製化的行銷內容，如：__個人化推薦、優惠訊息。<br>
+<strong>多渠道整合：</strong> 將線上與線下行銷渠道整合，例如：__透過LINE官方帳號提供優惠券、在實體店鋪設置QR code引導至線上商城。</p>
+<p><strong><em>台灣市場建議</em>：</strong></p>
+<p><strong>善用社群媒體：</strong> 台灣人愛使用社群媒體，可透過Facebook、Instagram等平台進行廣告投放，並與粉絲互動。<br>
+<strong>LINE行銷：</strong> LINE在台灣普及率高，可利用LINE官方帳號發送優惠訊息、進行互動遊戲。<br>
+<strong>網紅合作：</strong> 與台灣的網紅合作，透過口碑行銷增加品牌曝光度。</p>
+<h6 id="內容行銷建立品牌價值">內容行銷，建立品牌價值</h6>
+<p><strong>優質內容：</strong> 提供有價值的內容，如：__產品介紹、使用教學、購物指南等，吸引潛在客戶。<br>
+<strong>SEO優化：</strong> 透過SEO優化，讓網站更容易被搜尋引擎找到。<br>
+<strong>內容多元化：</strong> 不僅限於文字，還可以製作影片、圖文並茂的文章等。</p>
+<p><strong><em>台灣市場建議</em>：</strong></p>
+<p><strong>部落客合作：</strong> 與台灣的部落客合作，撰寫產品體驗文。<br>
+<strong>影音行銷：</strong> 製作產品介紹影片，放在YouTube或社群媒體上。<br>
+<strong>參與社群討論：</strong> 參與相關社群的討論，建立品牌形象。</p>
+<h6 id="優惠活動刺激消費">優惠活動，刺激消費</h6>
+<p><strong>限時折扣：</strong> 提供限時折扣、滿額贈品等優惠活動。<br>
+<strong>會員制度：</strong> 建立會員制度，提供會員專屬優惠。<br>
+<strong>抽獎活動：</strong> 舉辦抽獎活動，增加網站流量。</p>
+<p><strong><em>台灣市場建議</em>：</strong></p>
+<p><strong>結合節慶：</strong> 將優惠活動與台灣的節慶結合，增加活動的吸引力。<br>
+<strong>合作金流：</strong> 與台灣常見的金流業者合作，提供多元的付款方式。<br>
+<strong>超商取貨：</strong> 提供超商取貨服務，方便消費者取貨。</p>
+<p><strong><em>其他提升獲客率的建議</em>：</strong></p>
+<p><strong>網站優化：</strong> 確保網站速度快、操作流暢、介面簡潔。<br>
+<strong>客服服務：</strong> 提供即時、友善的客服服務，提升顧客滿意度。<br>
+<strong>口碑行銷：</strong> 鼓勵顧客分享購物經驗，透過口碑行銷吸引新客戶。</p>
+<h6 id="總結">總結</h6>
+<p>提高電商獲客率需要多管齊下，透過精準行銷、內容行銷、優惠活動等方式，吸引潛在客戶，並將他們轉換為忠實顧客。<br>
+同時，也要注意台灣市場的獨特性，針對台灣消費者的喜好與行為進行調整。</p>
 </div>
       </div>
     </div>
