--- a/work/migration-to-cloud/index.html
+++ b/work/migration-to-cloud/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>電商品牌 - AI OP-專業的運維服務</title>
+  <title>雲端遷移 - AI OP-專業的運維服務</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://aiop.one/favicon.png">
@@ -104,12 +104,12 @@
   </div>
 </div>
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/case/case1.jpg')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('https://loremflickr.com/1600/400/computer,network')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">case</span>
-      <h1>電商品牌</h1>
-      <p>打造品牌 跨境營銷</p>
+      <span class="hero-section">work</span>
+      <h1>雲端遷移</h1>
+      <p>節省基礎設施成本，優化雲端遷移</p>
     </div>
   </div>
 </div>
@@ -119,39 +119,30 @@
     <div class="col-12 col-md-8">
       <div class="case case-single">
         <div class="content"><p><strong>案例描述</strong>：
-一家台灣新興電商品牌希望在競爭激烈的市場中脫穎而出，並建立強大的品牌形象。
-他們需要快速構建一個吸引顧客的電商平台，並提升品牌知名度及市場份額。</p>
-<p><strong>挑戰</strong>：
-該品牌面臨的挑戰主要包括：建立一個功能全面且易於使用的電商平台，提升品牌在市場中的可見度，並有效管理線上營銷活動以吸引目標顧客。
-此外，還需要確保平台能夠支持多種支付方式和配送選項，並且具備良好的用戶體驗和性能。
-同時日賞的營運中也面臨這些挑戰：</p>
+某台灣知名電子商務平台，在傳統數據中心模式下,他們難以應對訂單高峰期的突發流量,同時硬體維護成本不斷攀升:</p>
 <ol>
-<li>難以準確洞察消費者需求，導致產品開發和營銷活動效果不佳。</li>
-<li>無法提供個性化的購物體驗，降低了顧客滿意度和忠誠度。</li>
-<li>難以有效管理供應鏈，導致庫存積壓和缺貨等問題。</li>
+<li>公司原有的本地基礎設施維護成本高昂，且難以擴展，亟需遷移至雲端以節省成本並提升敏捷性。</li>
+<li>面臨業務快速增長帶來的IT基礎設施壓力。</li>
 </ol>
+<p><em><strong>挑戰</strong></em>：
+該公司面臨的主要挑戰包括數據遷移過程中的數據完整性保障、雲端架構的設計與優化、業務系統的平滑過渡以及確保遷移過程中的業務連續性。此外，還需確保遷移後的雲端環境具有高安全性和高性能，以滿足日益增長的業務需求。</p>
 <h6 id="解決方案">解決方案</h6>
-<p>我們首先幫助客戶選擇了流行的電商平台工具，包括 Shopify 和 WordPress eCommerce，並根據品牌需求進行了功能擴展和自定義設計。
-我們設計了一個現代化的用戶界面，確保平台具備簡便的購物流程和高效的產品管理系統。</p>
-<p>在品牌推廣方面，我們運用了 SEO 優化、社交媒體營銷和內容營銷等策略，提升了品牌的線上曝光率。我們還設計了促銷活動和忠誠度計劃，以吸引並留住顧客。</p>
+<p>我們的團隊與客戶密切合作，評估其 IT 環境並制定雲端遷移策略。
+隨後，我們協助客戶將其基礎設施遷移至公共雲平台，例如 AWS 或 Azure。
+最終，客戶成功降低了 <code>30%</code> 的 IT 基礎設施成本，並在雲端遷移方面取得顯著節省。</p>
+<p>接手後，首先進行了全面的需求分析和現狀評估，制定了詳細的遷移計劃。考慮到客戶的業務需求和預算，我們選擇了 AWS 作為雲端服務提供商。我們的團隊精心設計了雲端架構，確保其具備高可用性和可擴展性。</p>
+<p>在遷移過程中，我們採用了分階段的遷移策略，確保每個步驟都在可控範圍內進行。我們首先遷移了非核心業務，進行充分測試後，再逐步將核心業務遷移至雲端。整個過程中，我們確保了數據的完整性和系統的安全性，避免了任何業務中斷。</p>
 <h6 id="案例成果">案例成果</h6>
-<p>經過三個月的合作，該電商品牌的電商平台成功上線，並迅速吸引了大量顧客。品牌的網站流量提升了150%，轉化率提高了35%。
-線上銷售額在首個季度達到預期目標的120%，顯著提升了市場份額和品牌知名度。用戶反饋表明，平台的用戶體驗良好，購物過程簡便且愉快。</p>
+<p>我們為該公司設計了全面的雲端遷移方案,採用混合雲架構,將80%的核心交易系統遷移至公有雲,同時保留20%的敏感數據在私有雲中。</p>
 <h6 id="具體措施建議">具體措施建議</h6>
 <ol>
-<li>選擇合適平台：根據品牌需求選擇合適的電商平台工具，如 Shopify 或 WordPress eCommerce。</li>
-<li>自定義設計：設計符合品牌形象的用戶界面，確保購物流程的簡便和高效。</li>
-<li>SEO 優化：進行 SEO 優化，提升品牌在搜索引擎中的可見度。</li>
-<li>社交媒體營銷：運用社交媒體推廣品牌，增加品牌曝光率。</li>
-<li>內容營銷：創建有價值的內容來吸引和維護顧客。</li>
-<li>促銷和忠誠度計劃：設計促銷活動和忠誠度計劃以提升顧客留存率。</li>
+<li>通過使用容器技術和自動擴展策略,我們幫助客戶實現了資源的彈性調配,使系統能夠在15分鐘內將處理能力提升3倍,輕鬆應對&quot;雙11&quot;等購物節的流量高峰。</li>
+<li>遷移完成後,該平台的系統性能提升了42%,高峰期響應時間從原本的2秒減少到0.8秒,降低了60%,顯著改善了用戶體驗。</li>
 </ol>
+<p>同時,IT運營成本降低了37%,從每年2000萬新台幣降至1260萬新台幣,硬體投資減少65%,從原本的5000萬新台幣降至1750萬新台幣。</p>
 <h6 id="案例啟示">案例啟示</h6>
-<p>這次成功的電商品牌協助案例表明，通過量身定制的電商平台建設和全面的品牌推廣策略，可以有效提升品牌在市場中的競爭力。
-對於快速成長的電商品牌,及時進行數字化轉型至關重要。通過整合先進技術和優化運營流程,不僅能夠顯著提升運營效率,還能大幅改善客戶體驗,從而在激烈的市場競爭中脫穎而出。成功的電商運營需要在技術、流程和人才三方面同步發力,持續優化和創新。</p>
-<h6 id="規劃電商品牌的重要流程">規劃電商品牌的重要流程</h6>
-<p><a href="/case/e-commerce-arch/">查看案例</a></p>
-<p><a href="/work/increase-customer-acquistion-rate/">提高獲客率的3個方法</a></p>
+<p>雲端環境的靈活性使得該公司能夠將新功能和服務的上線時間從平均4週縮短到1週,提高了市場競爭力。
+這個成功案例展示了精心規劃的雲端遷移如何為企業帶來顯著的效益,不僅優化了性能和成本,還為業務創新提供了強大支撐。</p>
 </div>
       </div>
     </div>
